2004-03-03  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wait.adb:
	Call Net.Free routine after Net.Shutdown.

	* zopen.adb:
	Do not use AWS.Services.Files.

	* check_mem.adb:
	Do not use AWS.Services.Files.

2004-03-03  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wait.adb, wait.out:
	Ready to use.

2004-03-01  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wait.adb:
	Test for wait on group of sockets. Still under development,
	because of problem shutdown detection under Win32.

2004-02-02  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* auth2.out, cert.out, compress.out, dirop.out, get_post.out,
	  googlesearch.out, multiple.out, sback.out, server_config.out,
	  sessions.out, ssback.out, tcom.out, test_soap2.out, test_soap3.out,
	  wsdl_1.out, wsdl_2.out, wsdl_5.out, wsdl_6.out, zopen.out:
	Remove DOS style CR at end of line.

2004-02-01  Pascal Obry  <obry@act-europe.fr>

	* makefile:
	Change check_mem ports.

2004-01-31  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(RT_STD): Add sessions4.

	* regtests.gpr:
	(Languages): Add.
	(Compiler): Do not import the Shared one, we want only partial
	 style checks on the regtest module.

	* sessions4.adb, sessions4.out:
	Initial revision.

2004-01-28  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* eres.adb, sock2.adb:
	Remove DOS style CR at end of line.

2004-01-28  Pascal Obry  <p.obry@wanadoo.fr>

	* regtests.gpr:
	Initial revision.

	* auth.adb:
	Minor reformatting.
        Update copyright notice.

2004-01-26  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Minor reformatting.

2004-01-25  Pascal Obry  <p.obry@wanadoo.fr>

	* sessions.adb:
	Change port.
	(Server): Add exception handler.

2004-01-22  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(clean): Fix regexp to remove the Emacs temp files.

2004-01-21  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(Clean): Fix remove for test-dir?.

2004-01-15  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* tlog.adb:
	Rollback previous modification, it does not help for stabilize linux